--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,37 @@
 
 
-.container {
-    width: 960px;
+body {
+    background-image: "assets/images/handmadepaper/handmadepaper.png";
 }
 
+.container {
+    width: 960px;
+    color: #777777;
+    background-color: #ffffff;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    border-color: #dddddd;
+
+}
+
+header {
+    border-bottom: 10px;
+    border-color: #cccccc;
+    background-color: #cccccc;
+}
+
+h1 {
+    background: #4aaaa5;
+    color: white;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h2 {
+    color: #4aaaa5;
+}
+
+.foot {
+    text-align: center;
+    color: white;
+    background-color: #666666;
+}
