--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 
 
 body {
-    background-image: "assets/images/handmadepaper/handmadepaper.png";
+    background-image: url("../../assets/images/handmadepaper/handmadepaper.png");
+   
 }
 
 .container {
@@ -10,28 +11,54 @@ body {
     background-color: #ffffff;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     border-color: #dddddd;
-
 }
 
 header {
-    border-bottom: 10px;
+    border-bottom-style: solid;
+    border-width: 2px;
     border-color: #cccccc;
-    background-color: #cccccc;
+}
+
+article, section {
+    margin-top: 30px;
+    margin-bottom: 60px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    padding: 25px;
+}
+
+article img {
+    margin-right: 10px;
 }
 
 h1 {
     background: #4aaaa5;
     color: white;
     text-align: center;
+    margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h2 {
     color: #4aaaa5;
+    border-bottom-style: solid;
+    border-color: #cccccc;
+    border-width: 3px;
 }
 
-.foot {
+footer {
     text-align: center;
     color: white;
     background-color: #666666;
+    height: 40px;
+    font-size: 10px;
+    border-top-style: solid;
+    border-color: #4aaaa5;
+    border-width: 4px;
+}
+
+.gallery img {
+margin-top: 10px;
+margin-bottom: 20px;
 }
